backends/drm: allow modesets with atomic tests if a modeset is already pending

Otherwise the tests will always fail

BUG: 461657